# ExternalMedia

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Installation.txt  README.md  README_changelog.md  README_compilation.md  README_coolprop.md  README_fluidprop.md  README_history.md  README_introduction.md  _fluid_prop___c_o_m_8h_source.html  _fluid_prop___i_f_8h_source.html  _modelica_utilities_8h_source.html  annotated.html  appveyor.yml  basesolver_8h_source.html  class_base_solver-members.html  class_base_solver.html  class_cool_prop_solver-members.html  class_cool_prop_solver.html  class_fluid_prop_solver-members.html  class_fluid_prop_solver.html  class_solver_map-members.html  class_solver_map.html  class_t_fluid_prop-members.html  class_t_fluid_prop.html  class_test_solver-members.html  class_test_solver.html  classes.html  coolpropsolver_8h_source.html  dir_937900b87e0c7a5fa01190c395fb83f7.html  doxygen_crawl.html  errorhandling_8h.html  errorhandling_8h_source.html  externalmedialib_8h.html  externalmedialib_8h_source.html  files.html  fluidconstants_8h_source.html  (+35 more)
.github/workflows/: ci.yml  ci_cd.yml  cmake.yml  cmake_version.yml  docs.yml  files.yml
C++ Projects/Bloodshed/: ExternalTwoPhaseMediumTester.dev  main.cpp
C++ Projects/Bloodshed lib/: ExternalTwoPhaseMedium.dev
C++ Projects/GCC/: Makefile  createLib.bat  main.cpp
C++ Projects/Microsoft Visual Studio 2003 lib/: ExternalTwoPhaseMedium.sln  ExternalTwoPhaseMedium.vcproj
C++ Projects/Microsoft Visual Studio 2005/: ExternalTwoPhaseMedium.vcproj  readme.txt
C++ Projects/Microsoft Visual Studio 2005 lib/: ExternalTwoPhaseMedium.vcproj  ExternalTwoPhaseMediumLIB.sln
C++ Projects/Sources/: Doxyfile  FluidProp_COM.H  FluidProp_IF.H  FluidProp_IF.cpp  (+26 more)
Doc/: HowTo.html  HowTo.txt
Projects/: BuildLIB-GCC-OM.sh  BuildLIB-OMC-gcc-linux.sh  BuildLIB-OMC-gcc-windows.sh  BuildLIB-OMC-gcc.sh  BuildLib-CMake.bat  BuildLib-CMake.sh  BuildLib-Dymola-VS2008.bat  BuildLib-Dymola-VS2010.bat  BuildLib-Dymola-VS2012.bat  BuildLib-Dymola-VS2013.bat  BuildLib-Dymola-VS2015.bat  BuildLib-OMC-gcc-linux.sh  BuildLib-OMC-gcc-windows.sh  BuildLib-OMC-gcc.sh  BuildLib-VS.bat  BuildLib-VS2012.bat  CMakeLists.txt  CompilationHowTo.txt  Doxyfile  README.txt  make-gcc  make-gcc-workaround  make-vs-2005.bat  make-vs-2008.bat  make-vs-2010.bat  makefile  makefile-linux
Projects/Bloodshed/: ExternalTwoPhaseMedium.dev
Projects/CDT/: .cproject  .project  README.txt
Projects/Export/: CMakeLists.txt
Projects/Export/include/: Export.h
Projects/ExternalMediaLib/: CMakeLists.txt  externalmedialib.cpp  mingw_gcc_comutil.cpp  solvermap.cpp
Projects/ExternalMediaLib/CommonInclude/: CMakeLists.txt
Projects/ExternalMediaLib/CommonInclude/include/: include.h
Projects/ExternalMediaLib/SolverCoolProp/: CMakeLists.txt  coolpropsolver.cpp
Projects/ExternalMediaLib/SolverCoolProp/include/: coolpropsolver.h
Projects/ExternalMediaLib/SolverFluidProp/: CMakeLists.txt
Projects/ExternalMediaLib/SolverInterface/: CMakeLists.txt  basesolver.cpp
Projects/ExternalMediaLib/SolverInterface/include/: basesolver.h  fluidconstants.h
Projects/ExternalMediaLib/SolverTest/: CMakeLists.txt  testsolver.cpp
Projects/ExternalMediaLib/SolverTest/include/: testsolver.h
Projects/ExternalMediaLib/ThermodynamicStructs/: CMakeLists.txt
Projects/ExternalMediaLib/ThermodynamicStructs/include/: ThermodynamicStructs.h
Projects/ExternalMediaLib/errorhandling/: CMakeLists.txt  errorhandling.cpp
Projects/ExternalMediaLib/errorhandling/include/: errorhandling.h
Projects/ExternalMediaLib/include/: externalmedialib.h
Projects/ExternalMediaLib/private_include/: solvermap.h
Projects/MakeRelease/: make-vs-2005.bat  make-vs-2008.bat  make-vs-2010.bat
Projects/Microsoft Visual Studio 2003 lib/: ExternalMediaLib.sln  ExternalMediaLib.vcproj  ExternalTwoPhaseMedium.vcproj
Projects/Microsoft Visual Studio 2005/: ExternalMediaLib.sln  ExternalMediaLib.vcproj  ExternalTwoPhaseMedium.vcproj
Projects/Microsoft Visual Studio 2005 lib/: ExternalMediaLib.sln  ExternalMediaLib.vcproj  ExternalTwoPhaseMedium.vcproj
Projects/Microsoft Visual Studio 2008/: ExternalMediaLib.sln  Microsoft Visual Studio 2008.vcproj
Projects/Microsoft Visual Studio 2010/: ExternalMediaLib.sln  ExternalMediaLib.vcxproj  Microsoft Visual Studio 2008.vcxproj
Projects/Microsoft Visual Studio 2010 lib/: ExternalMediaLib.vcproj
Projects/ModelicaStaticHelper/: CMakeLists.txt  ModelicaUtilities.cpp
Projects/ModelicaStaticHelper/include/: ModelicaUtilitiesStatic.h
Projects/ModelicaUtilitiesHelper/: CMakeLists.txt  ModelicaUtilities.cpp
Projects/ModelicaUtilitiesHelper/include/: ModelicaUtilities.h
Projects/RunTests/: runtests.3.2.1.mos  runtests.3.2.mos  runtests.mos
Projects/Sources/: .gitignore  Doxyfile  FluidProp_COM.H  FluidProp_COM.h  FluidProp_IF.H  FluidProp_IF.cpp  FluidProp_IF.h  Makefile  ModelicaUtilities.h  README-DOXYGEN.txt  basesolver.cpp  basesolver.h  basetwophasemedium.cpp  basetwophasemedium.h  coolpropsolver.cpp  coolpropsolver.h  documentation.h  errorhandling.cpp  errorhandling.h  externalmedialib.cpp  externalmedialib.h  externaltwophasemedium.cpp  externaltwophasemedium.h  fluidconstants.h  fluidpropsolver.cpp  fluidpropsolver.h  importer.h  include.h  include.h.in  mediummap.h  mingw_gcc_comutil.cpp  solvermap.cpp  solvermap.h  testsolver.cpp  testsolver.h  twophasemedium.cpp  twophasemedium.h  twophasemediumproperties.cpp  twophasemediumproperties.h
Projects/Sources/FluidPropInterface/include/: FluidProp_COM.h
Projects/Tests/: CMakeLists.txt  coolprop_comparisons.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  (+47 more)
(+126 files in other folders)
